--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,14 +1,10 @@
 .navbar {
-    background-color: rgba(58, 60, 60, 0.747);
+    background-color: rgb(13, 110, 253, 1);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: medium;
 }
 
 #navbarText {
-    color: white;
-}
-
-.navi-tem {
     color: white;
 }
 
